[gd_scene load_steps=4 format=3 uid="uid://xiwlw3ict5p"]

[ext_resource type="Texture2D" uid="uid://dl8u2hk4yiw3a" path="res://assets/img/vesper_face.png" id="1_f0btq"]
[ext_resource type="Script" path="res://scenes/lapdance.gd" id="1_ub26l"]
[ext_resource type="PackedScene" uid="uid://728fnim4yyl8" path="res://scenes/dialogue_label.tscn" id="2_7b3px"]

[node name="Lapdance" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ub26l")

[node name="SceneBg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DialogBox" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = -338.0
offset_right = -219.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="DialogBox"]
visible = false
layout_mode = 0
offset_left = -178.0
offset_top = -79.0
offset_right = 166.0
offset_bottom = 303.0
texture = ExtResource("1_f0btq")
expand_mode = 1

[node name="DialogueLabel" parent="DialogBox" instance=ExtResource("2_7b3px")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 21.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Type here"
messages = Array[String](["Vesper: You said something about a strip club… now, would a lap dance make you happy?", "Deckard: Sure… if you put your heart into it.", "Vesper: I’ve never done something like it… but I’ll try.", "Deckard: No worries, you do your best. I’ll just sit here and relax. I’m a good client, no touching.", "Deckard: You see, we have rules in this world, Vesper. You’ve broken one, now it’s time to redeem yourself.", "Deckard sits on a chair waiting for the show to start. He looks excited but at the same time like he’s done this thousands of times.", "Deckard: Now, why don’t you start shaking those hips? ", "You do as you’re told and start shaking your hips.", "You tell yourself it’s just a dance, in exchange for some blood and him not calling the police.", "Deckard: And take that jacket off. I can barely see your rack.", "Deckard: Nice, you have an awesome butt.", "Now sit on my lap and shake it.", "You approach him timidly, moving awkwardly, but soon start to get into the rhythm.", "As he promised, he hasn’t touched you a single time. He’s just sitting there, with a smile on his face.", "You’re kind of disappointed, you’ve been rubbing against him for at least five minutes and he isn’t even hard. ", "Since you’re already doing this you’re trying your best to have some fun too. ", "Vesper: Am I boring you? I thought you wanted me to sit on your lap.", "Deckard: Oh no, you’re doing just fine. ", "Vesper: Then why aren’t you getting at least a little hard? ", "Deckard: Well, it’s not my first rodeo. I can tell you’re not enjoying yourself. And I prefer women with attitude.", "Vesper: I’m just a little nervous. I thought you would call the police and now I’m dancing on your lap trying to get you hard. It’s a lot to take in so quickly.", "Vesper: But, if you like women with attitude… then what about if I show you my underwear? ", "You unbutton a few buttons of your shirt.", "You can feel a little bulge starting to develop.", "Vesper: Well, well… look who’s decided to show up to the party.", "You’re starting to feel in control. It feels good.", "Deckard: You’re doing much better than I thought you would, are you sure this is your first time?", "Vesper: Yep, I’m a fast learner.", "Deckard: Indeed you are.", "Vesper: Alright, it’s about time you keep your part of the deal.", "Vesper: As a bonus, I’ll let you have some more room to breathe.", "You grab his zipper and slowly pull it down.", "That seems to put the cherry on top of the cake. You can finally feel his member pulsating under his briefs.", "Vesper: Now, you’re gonna let me leave and take some blood with me, as agreed?", "Deckard: After this little show you’ve put up I’ll happily let you go and take a vial with you.", "Deckard: If you’re feeling like visiting old Deckard again, you know where to find me.", "You come with money or be prepared to pay with that pretty body of yours, as promised, we’ll do whatever you’re comfortable with.", "Vesper: Okay, it’s a deal.", "He unlocks the door and lets you leave with a vial in your pocket.", "-- END OF LAPDANCE --"])

[node name="NamePanel" type="Panel" parent="DialogBox"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -197.0
offset_right = -1132.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="DialogBox/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Vesper"
horizontal_alignment = 1
vertical_alignment = 1
